@startuml

title <b>Model v1</b>
left to right direction
skinparam shadowing false

class Customer {
  +string **id**
  +string **name**
  +number **balance**
}

class Seller {
  +string **id**
  +string **name**
  +number **balance**
}

class Order {
  +string **id**
  +Date **createdAt**
  +Payment **payment**
  +string **status**
  +Customer **customer**
}

Customer "1" -- "0..N" Order
Order "1" -- "N..1" OrderItem
Order "1" -- "N..1" Payment
Payment "1" -- "0..N" Refund
OrderItem "1..N" -- "1" Item
OrderItem "1..N" -- "1" Seller
OrderItem "1..N" -- "1" Invoice
Payment "1..N" -- "1" GatewaySettlement
Invoice "1..N" -- "1" SellerSettlement
Invoice "1..N" -- "1" MarketSettlement
@enduml
